--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+<dependency>
+    <groupId>io.jenkins.plugins</groupId>
+    <artifactId>plugin-util-api</artifactId>
+</dependency>
+
   </dependencies>
 </project>
